# model-training

./: .gitignore  .pylintrc  Pipfile  README.md  dvc.yaml  output.json  params.yml  pyproject.toml  report.txt
.dvc/: config
.github/workflows/: code_quality.yaml  pipeline.yaml
data/processed/: x_train.pkl
notebooks/: phishing-detection-cnn.ipynb
src/data/: make_dataset.py  preprocess_data.py
src/models/: create_model.py  predict.py
tests/: conftest.py
tests/adequacy/: test_neuron_coverage.py
tests/benchmark/: bench.py
tests/data/: test_make_dataset.py  test_preprocess_data.py
tests/models/: bench.py  test_create_model.py
